forgot to integrate the js into the html last time, so I fixed that

--- a/test.html
+++ b/test.html
@@ -12,47 +12,29 @@
 
     var damageThisRound = Math.floor(Math.random()*5 + 1);
 
-    //This adds a story to the game, it adds both console.log and alert so that you can read back through the story, instead of just going throught he popups
-    console.log("You are a pecefull villager, a dragon apears and burninates your whole village, except you.");
-    //This adds a choice
-    var choice1 = prompt("You are a pecefull villager, a dragon apears and burninates yoru whole village, except you, what do you do? \n1. Run at the dragon to fight him \n2. Cry \n3. pretend you're the king");
-    //this choice will have your character cry
-    if(choice1 == 2){alert("You cry, after weeks of no people around you to farm, you die of starvation");console.log("You cry, after weeks of no people around you to farm, you die of starvation");}
-    //This choice make syou go mad with fake power, becouse... why not?
-    if(choice1 == 3){alert("You pretend your the king, you go mad with fake power, and die of thirst becouse you refused to get yoru own water when no pesent would give it to you...");
-        alert("stupid peasents");
-        console.log("You pretend your the king, you go mad with fake power, and die of thirst becouse you refused to get yoru own water when no pesent would give it to you...");
-        console.log("stupid peasents");
-    }
+    var totalDamage = 0;
 
-    //this choice actually does the adventure
-    if(choice1 == 1) {
-        //you are given more story then you fight the dragon
-        alert("You find the dragon, you take your rake in hand, the dragon is already dead");
-        console.log("You find the dragon, you take your rake in hand, the dragon is already dead")
-        alert("but the dragon had an egg, it hatched, the baby dragon says in a little cute voice, \"I am the burninator\", it attacks you, you fight back");
-        console.log("but the dragon had an egg, it hatched, the baby dragon says in a little cute voice, \"I am the burninator\", it attacks you, you fight back")
-        while (slaying) {
-            damageThisRound = Math.floor(Math.random() * 5 + 1);
+    console.log("You are a pecefull villager, a dragon apears and burninates yoru whole village, except you.");
+    switch(prompt("You are a pecefull villager, a dragon apears and burninates yoru whole village, except you, what do you do? \n1. Run at the dragon to fight him \n2. Cry \n3. pretend you're the king")){
 
-            youHit = Math.floor(Math.random() * 2);
-
-            totalDamage = 0;
-            if (youHit == 1) {
-                alert("you hit the dragon");
-                totalDamage += damageThisRound;
-            } else {
-                alert("You have been burninated");
-                console.log("You have been burninated");
-                slaying = false;
+        case "2":alert("You cry, after weeks of no people around you to farm, you die of starvation");console.log("You cry, after weeks of no people around you to farm, you die of starvation");
+            break;
+        case "3":
+            alert("You pretend you're the king, you go mad with fake power, and die of thirst becouse you refused to get your own water when no pesent would give it to you...");
+            alert("stupid peasents");
+            console.log("You pretend you're the king, you go mad with fake power, and die of thirst becouse you refused to get your own water when no pesent would give it to you...");
+            console.log("stupid peasents");
+            break;
+        case "1":
+            alert("You find the dragon, you take your rake in hand, the dragon is already dead");
+            console.log("You find the dragon, you take your rake in hand, the dragon is already dead");
+            alert("but the dragon had an egg, it hatched, the baby dragon sayd \"I am the burninator\", it attacks you, you fight back");
+            console.log("but the dragon had an egg, it hatched, the baby dragon sayd \"I am the burninator\", it attacks you, you fight back");
+            while(slaying){
+                if(youHit == 1){alert("you hit the dragon"); totalDamage += damageThisRound;}else{console.log("You have been burninated"); slaying = false;}
+                if(totalDamage >= 5){alert("you win, you ahve avenged your village");console.log("you win, you have avenged your village");slaying = false;}
             }
-            if (totalDamage >= 7) {
-                alert("you win, you have avenged your village");
-                console.log("you win, you have avenged your village");
-                slaying = false;
-            }
-        }
-    }
+            break;
     }
 </script>
 </body>
